--- a/landingPage.html
+++ b/landingPage.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaz's Website</title>
-    <link rel="Website icon" type="png" href="/PICTURES/JAZ LOGO.png">
-    <link rel="stylesheet" href="/CSS/main.css">
+    <link rel="Website icon" type="png" href="JAZ LOGO.png">
+    <link rel="stylesheet" href="main.css">
 
 </head>
 <body>
@@ -28,7 +28,7 @@
             <div class="content-box1 box" id="box1">
                 <div class="bg-home">
                     <div class="home-child1">
-                        <img src="/PICTURES/jaz.jpg" alt="">
+                        <img src="jaz.jpg" alt="">
                     </div>
                     <div class="home-child2">
 
