--- a/landingPage.html
+++ b/landingPage.html
@@ -40,7 +40,10 @@
                         <h1 class="home-text">HELLO, I'M <span class="auto-type"></span></h1>
                         
                         <p class="home-text">I am a 21-year-old, 3rd-year student pursuing a Bachelor of Science in Information Technology at Rizal Technological University. Residing in Mandaluyong City, I am passionate about technology and programming, with skills in frameworks.</p>
-                        <h2 class="hire-me">Hire me</p>
+                        <div class="btn-div">
+                            <h2>Hire me</p>
+                            <h2>My works</p>
+                        </div>
                     </div>
                 </div>
             </div>
